2011-04-22  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/ia64.h (AO_MASK): Add "volatile" for
	asm; remove redundant trailing ';'.

2011-04-11  Ivan Maidanski  <ivmai@mail.ru> (really Jim Meyering)

	* doc/README.txt: Remove doubled words in comments.

2011-03-18  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/arm.h: Test for all the known pre-v6
	ARM chips instead of all the currently existing v6+ ones.

2011-03-13  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/emul_cas.h: Fix a typo in a comment;
	expand all tabs to spaces.
	* src/atomic_ops/sysdeps/gcc/x86.h (AO_test_and_set_full):
	Recognize AO_XCHGB_RET_WORD new macro (to workaround a bug).
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_test_and_set_full):
	Ditto.

2011-02-19  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops.c: Include sys/time.h (to get timespec) for NaCl.
	* src/atomic_ops_malloc.c (msb): Do the shift by 32 only once (in
	a conditional expression) to prevent a compiler warning.
	* src/atomic_ops_malloc.c: Expand all tabs to spaces; remove
	trailing spaces at EOLn.

2011-02-19  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops.c: Explicitly define AO_USE_NO_SIGNALS and
	AO_USE_NANOSLEEP for NaCl.

2011-02-19  Ivan Maidanski  <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif using autoconf-2.68,
	automake-1.11.1 and libtool-2.4).
	* configure: Ditto.

2011-02-09  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops.c (AO_USE_NO_SIGNALS, AO_USE_NANOSLEEP): New
	macros.
	* src/atomic_ops.c (AO_USE_WIN32_PTHREADS): Imply
	AO_USE_NO_SIGNALS.
	* src/atomic_ops.c: Don't include signal.h if AO_USE_NO_SIGNALS.
	* src/atomic_ops.c: Include time.h if AO_USE_NANOSLEEP.
	* src/atomic_ops.c (AO_locks, AO_pause): Reformat the code.
	* src/atomic_ops.c (AO_pause): Use nanosleep() if
	AO_USE_NANOSLEEP.
	* src/atomic_ops.c (all_sigs, initialized,
	AO_compare_and_swap_emulation,
	AO_compare_double_and_swap_double_emulation): Use