@@ -5,21 +5,12 @@
  * see doc/COPYING for details.
  */
 
-void test_atomic(void);
-void test_atomic_release(void);
-void test_atomic_acquire(void);
-void test_atomic_read(void);
-void test_atomic_write(void);
-void test_atomic_full(void);
-void test_atomic_release_write(void);
-void test_atomic_acquire_read(void);
-
 /* Some basic sanity tests.  These do not test the barrier semantics. */
 
 #undef TA_assert
 #define TA_assert(e) \
   if (!(e)) { fprintf(stderr, "Assertion failed %s:%d (barrier: )\n", \
-		    __FILE__, __LINE__), exit(1); }
+                    __FILE__, __LINE__), exit(1); }
 
 #undef MISSING
 #define MISSING(name) \
@@ -209,7 +200,7 @@ void test_atomic(void)
 }
 
 
-    
+
 /*
  * Copyright (c) 2003 by Hewlett-Packard Company.  All rights reserved.
  *
@@ -222,7 +213,7 @@ void test_atomic(void)
 #undef TA_assert
 #define TA_assert(e) \
   if (!(e)) { fprintf(stderr, "Assertion failed %s:%d (barrier: _release)\n", \
-		    __FILE__, __LINE__), exit(1); }
+                    __FILE__, __LINE__), exit(1); }
 
 #undef MISSING
 #define MISSING(name) \
@@ -412,7 +403,7 @@ void test_atomic_release(void)
 }
 
 
-    
+
 /*
  * Copyright (c) 2003 by Hewlett-Packard Company.  All rights reserved.
  *
@@ -425,7 +416,7 @@ void test_atomic_release(void)
 #undef TA_assert
 #define TA_assert(e) \
   if (!(e)) { fprintf(stderr, "Assertion failed %s:%d (barrier: _acquire)\n", \
-		    __FILE__, __LINE__), exit(1); }
+                    __FILE__, __LINE__), exit(1); }
 
 #undef MISSING
 #define MISSING(name) \
@@ -615,7 +606,7 @@ void test_atomic_acquire(void)
 }
 
 
-    
+
 /*
  * Copyright (c) 2003 by Hewlett-Packard Company.  All rights reserved.
  *
@@ -628,7 +619,7 @@ void test_atomic_acquire(void)
 #undef TA_assert
 #define TA_assert(e) \
   if (!(e)) { fprintf(stderr, "Assertion failed %s:%d (barrier: _read)\n", \
-		    __FILE__, __LINE__), exit(1); }
+                    __FILE__, __LINE__), exit(1); }
 
 #undef MISSING
 #define MISSING(name) \
@@ -818,7 +809,7 @@ void test_atomic_read(void)
 }
 
 
-    
+
 /*
  * Copyright (c) 2003 by Hewlett-Packard Company.  All rights reserved.
  *
@@ -831,7 +822,7 @@ void test_atomic_read(void)
 #undef TA_assert
 #define TA_assert(e) \
   if (!(e)) { fprintf(stderr, "Assertion failed %s:%d (barrier: _write)\n", \
-		    __FILE__, __LINE__), exit(1); }
+                    __FILE__, __LINE__), exit(1); }
 
 #undef MISSING
 #define MISSING(name) \
@@ -1021,7 +1012,7 @@ void test_atomic_write(void)
 }
 
 
-    
+
 /*
  * Copyright (c) 2003 by Hewlett-Packard Company.  All rights reserved.
  *
@@ -1034,7 +1025,7 @@ void test_atomic_write(void)
 #undef TA_assert
 #define TA_assert(e) \
   if (!(e)) { fprintf(stderr, "Assertion failed %s:%d (barrier: _full)\n", \
-		    __FILE__, __LINE__), exit(1); }
+                    __FILE__, __LINE__), exit(1); }
 
 #undef MISSING
 #define MISSING(name) \
@@ -1224,7 +1215,7 @@ void test_atomic_full(void)
 }
 
 
-    
+
 /*
  * Copyright (c) 2003 by Hewlett-Packard Company.  All rights reserved.
  *
@@ -1237,7 +1228,7 @@ void test_atomic_full(void)
 #undef TA_assert
 #define TA_assert(e) \
   if (!(e)) { fprintf(stderr, "Assertion failed %s:%d (barrier: _release_write)\n", \
-		    __FILE__, __LINE__), exit(1); }
+                    __FILE__, __LINE__), exit(1); }
 
 #undef MISSING
 #define MISSING(name) \
@@ -1427,7 +1418,7 @@ void test_atomic_release_write(void)
 }
 
 
-    
+
 /*
  * Copyright (c) 2003 by Hewlett-Packard Company.  All rights reserved.
  *
@@ -1440,7 +1431,7 @@ void test_atomic_release_write(void)
 #undef TA_assert
 #define TA_assert(e) \
   if (!(e)) { fprintf(stderr, "Assertion failed %s:%d (barrier: _acquire_read)\n", \
-		    __FILE__, __LINE__), exit(1); }
+                    __FILE__, __LINE__), exit(1); }
 
 #undef MISSING
 #define MISSING(name) \
@@ -1628,6 +1619,3 @@ void test_atomic_acquire_read(void)
     MISSING(AO_compare_and_swap_double);
 # endif
 }
-
-
-    
